--- a/jquery.dropdown.css
+++ b/jquery.dropdown.css
@@ -91,3 +91,9 @@
 	-webkit-transform: rotate(225deg);
 	transform: rotate(225deg);
 }
+
+
+.dropdown_disabled .dropdown__trigger,
+.dropdown_disabled .dropdown__trigger:hover {
+	background-color: #f9f9f9;
+}
